--- a/exercise_2/index.html
+++ b/exercise_2/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Exercise 2</title>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://unpkg.com/topojson@3"></script>
+
+    <script type="application/javascript" src="viz.js"></script>
+    <link type="text/css" rel="stylesheet" href="viz.css"  />
 </head>
 <body>
-$END$
+    <script type="application/javascript">
+        d3.queue()
+            .defer(d3.json, "https://mas-dse.github.io/DSE241/2018/data/exercise2-olympics.json")
+            .defer(d3.json, "https://unpkg.com/world-atlas@1/world/50m.json")
+            .await(init);
+
+        function init(error, olympics, atlas) {
+            if(error) { console.log(error); }
+
+            d3.select("body")
+                .data([olympics,atlas])
+                .call(viz);
+        }
+    </script>
 </body>
 </html>
