--- a/exercise_2/index.html
+++ b/exercise_2/index.html
@@ -3,24 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Exercise 2</title>
+    <script src="http://underscorejs.org/underscore-min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="http://bl.ocks.org/davegotz/raw/bd54b56723c154d25eedde6504d30ad7/b63d30f77840a908c40ad3bbcfaf8baa90ae1f14/d3-tip.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 
     <script type="application/javascript" src="viz.js"></script>
     <link type="text/css" rel="stylesheet" href="viz.css"  />
+
 </head>
 <body>
     <script type="application/javascript">
         d3.queue()
             .defer(d3.json, "https://mas-dse.github.io/DSE241/2018/data/exercise2-olympics.json")
             .defer(d3.json, "https://raw.githubusercontent.com/jdamiani27/Data-Visualization-and-D3/master/lesson4/world_countries.json")
+            .defer(d3.csv, "medal_count.csv")
             .await(init);
 
-        function init(error, olympics, atlas) {
+        function init(error, olympics, atlas, medalCounts) {
             if(error) { console.log(error); }
 
             d3.select("body")
-                .datum({'olypmics':olympics,'atlas':atlas})
+                .datum({
+                    'olypmics':olympics,
+                    'atlas':atlas,
+                    'medalCounts':medalCounts
+                })
                 .call(viz());
         }
     </script>
