--- a/exercise_2/index.html
+++ b/exercise_2/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 
+    <script type="application/javascript" src="slider.js"></script>
     <script type="application/javascript" src="viz.js"></script>
     <link type="text/css" rel="stylesheet" href="viz.css"  />
 
