--- a/exercise_2/index.html
+++ b/exercise_2/index.html
@@ -20,7 +20,7 @@
         d3.queue()
             .defer(d3.json, "https://mas-dse.github.io/DSE241/2018/data/exercise2-olympics.json")
             .defer(d3.json, "https://raw.githubusercontent.com/jdamiani27/Data-Visualization-and-D3/master/lesson4/world_countries.json")
-            .defer(d3.csv, "medal_count.csv")
+            .defer(d3.json, "data.json")
             .await(init);
 
         function init(error, olympics, atlas, medalCounts) {
