--- a/exercise_5/d3_forceLayout/index.html
+++ b/exercise_5/d3_forceLayout/index.html
@@ -85,10 +85,17 @@
             }
         }*/ 
 		
+		var simulation = d3.forceSimulation() 
+            .force("charge", d3.forceManyBody().strength(-700)) 
+            .force("link", d3.forceLink().id(function(d) {return d.id;})) 
+            .force("center", d3.forceCenter(width / 2, height / 2))
+            //.force("y", d3.forceY(0.001))
+            //.force("x", d3.forceX(0.001));
+		
 		var colorp = d3.scaleOrdinal(d3.schemeCategory10); // D3 Version 4
 		
         function dragstarted(d) {
-            if (!d3.event.active) force.alphaTarget(0.5).restart();
+            if (!d3.event.active) simulation.alphaTarget(0.3).restart();
             d.fx = d.x;
             d.fy = d.y;
         }
@@ -99,7 +106,7 @@
         }
         
         function dragended(d) {
-            if (!d3.event.active) force.alphaTarget(0.5);
+            if (!d3.event.active) simulation.alphaTarget(0);
             d.fx = null;
             d.fy = null;
         } 
@@ -111,14 +118,7 @@
 			//console.log(json.nodes);
 			//console.log(json.links);
 			
-			var force = d3.forceSimulation() 
-            .force("charge", d3.forceManyBody().strength(-700).distanceMin(100).distanceMax(2000)) 
-            .force("link", d3.forceLink().id(function(d) {return d.id;})) 
-            .force("center", d3.forceCenter(width / 2, height / 2))
-            .force("y", d3.forceY(0.001))
-            .force("x", d3.forceX(0.001));
-			
-            force
+            simulation
                 .nodes(json.nodes) 
                 .force("link").links(json.links);	
 				
@@ -145,7 +145,7 @@
 
             node.append('circle')
                 .attr('r', function (d) {
-                    return (d.age+10);
+                    return (d.degree);
                 })
                 .attr('fill', function (d) {
                     return colorp(d.age);
@@ -192,7 +192,7 @@
 				});
 				//End tooltip code
 
-            force.on("tick", function () {
+            simulation.on("tick", function () {
                 link.attr("x1", function (d) {
                         return d.source.x;
                     })
@@ -225,15 +225,40 @@
 		function neighboring(a, b) {
 				return linkedByIndex[a.index + "," + b.index];
 		}
+		//Function to show only target nodes of current node
 		function connectedNodes() {
 				if (toggle == 0) {
 				//Reduce the opacity of all but the neighbouring nodes
 				d = d3.select(this).node().__data__;
 				node.style("opacity", function (o) {
+				//return neighboring(d, o) | neighboring(o, d) ? 1 : 0.1;
+				return neighboring(d, o) ? 1 : 0.1;
+				});
+				link.style("opacity", function (o) {
+						//return d.index==o.source.index | d.index==o.target.index ? 1 : 0.1;
+						return d.index==o.source.index ? 1 : 0.1;
+				});
+				//Reduce the op
+				toggle = 1;
+				} else {
+				//Put them back to opacity=1
+				node.style("opacity", 1);
+				link.style("opacity", 1);
+				toggle = 0;
+				}
+		}
+		//Function to show all connected nodes
+		function AllconnectedNodes() {
+				if (toggle == 0) {
+				//Reduce the opacity of all but the neighbouring nodes
+				d = d3.select(this).node().__data__;
+				node.style("opacity", function (o) {
 				return neighboring(d, o) | neighboring(o, d) ? 1 : 0.1;
+				//return neighboring(d, o) ? 1 : 0.1;
 				});
 				link.style("opacity", function (o) {
 						return d.index==o.source.index | d.index==o.target.index ? 1 : 0.1;
+						//return d.index==o.source.index ? 1 : 0.1;
 				});
 				//Reduce the op
 				toggle = 1;
@@ -245,7 +270,8 @@
 				}
 		}
 
-		node.on('click', connectedNodes); //Added code 
+		node.on('click', connectedNodes) //Added code 
+		.on('dblclick',AllconnectedNodes);
 		//End code for node selection
 		}
     </script>
