--- a/exercise_5/d3_forceLayout/index.html
+++ b/exercise_5/d3_forceLayout/index.html
@@ -9,19 +9,22 @@
 
     <script type="application/javascript" src="js/underscore-min.js"></script>
     <script type="application/javascript" src="js/d3.v4.min.js"></script>
-    <script type="application/javascript" src="js/topojson.js"></script>
+    <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.5/d3-legend.js"></script>
 
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="css/viz.css"  />
 
 </head>
 <body>
-<h3>BIGHORN SHEEP DOMINANCE</h3>
-<div id="element1">
-Data record wins and losses for 28 female bighorn sheep observed on the National Bison Range in 1984. The 'Weight' entry is the number of occasions on which the Source sheep was observed dominating the Target sheep. Ages are listed, but those assigned an age of 9 are at least 9 years old; they may be older.
+<div style="margin:auto;width:600px;text-align: center;padding:20px">
+    <h3 >BIGHORN SHEEP DOMINANCE</h3>
+    <div id="element1">
+    This data shows the confrontational interactions between 28 female bighorn sheep observed on the National Bison Range in 1984.
+    Each node is a sheep with a unique ID, color-filled by age.
+    The weight of the connections shows the number of interactions between two sheep.
+    </div>
 </div>
-<div id="slider"></div>
-<div id="graph">
+<div id="graph" style="margin:auto;width:900px;">
     <script type="application/javascript">
         d3.queue()
             //.defer(d3.json, "data/sheep_age.json")
@@ -39,8 +42,8 @@ Data record wins and losses for 28 female bighorn sheep observed on the National
                 })
                 .call(viz());
         }*/
-		var width = 600,
-            height = 500;
+		var width = 900,
+            height = 800;
 			
 		//h = 500 - margin.t - margin.b;
         var svg = d3.select("#graph").append("svg")
@@ -93,7 +96,7 @@ Data record wins and losses for 28 female bighorn sheep observed on the National
 		var simulation = d3.forceSimulation() 
             .force("charge", d3.forceManyBody().strength(-700)) 
             .force("link", d3.forceLink().id(function(d) {return d.id;})) 
-            .force("center", d3.forceCenter(width / 2, height / 2))
+            .force("center", d3.forceCenter(width / 2, (height) / 2))
             //.force("y", d3.forceY(0.001))
             //.force("x", d3.forceX(0.001));
 		
@@ -299,35 +302,54 @@ Data record wins and losses for 28 female bighorn sheep observed on the National
 		
 		//Legend code
 		//Append a defs (for definition) element to your SVG
-		var defs = svg.append("defs");
-		//Append a linearGradient element to the defs and give it a unique id
-		var linearGradient = defs.append("linearGradient")
-		.attr("id", "linear-gradient");
-		
-		svg.append("rect")
-		.attr("width", 300)
-		.attr("height", 20)
-		.attr("x",50)
-		.attr("y",480)
-		.style("fill", "url(#linear-gradient)");
-		
-		linearGradient.selectAll("stop") 
-		.data( colorp.range() )                  
-		.enter().append("stop")
-		.attr("offset", function(d,i) { return i/(colorp.range().length-1); })
-		.attr("stop-color", function(d) { return d; });
-		
-		/*linearGradient.append('text')                                     // NEW
-          .attr('x', 50 + 30)              // NEW
-          .attr('y', 410)              // NEW
-          .text('Age')
-		  .style("stroke","#ffffd9")
-          .style("font-family", "overwatch")
-          .style("font-size", "14px");*/
+
+            var legend = svg.append("g")
+                .attr("class", "legendOrdinal")
+                .attr("transform", "translate(240,50)");
+
+		    legend.append('text')
+                .html('Age in Years')
+                .attr("transform", "translate(164,-10)")
+                .attr('style','font-weight:bold;font-size:16px;')
+
+            var legendOrdinal = d3.legendColor()
+                .orient("horizontal")
+                .labels([1,2,3,4,5,6,7,8,'9+'])
+                .shapeWidth(45)
+                .shapeHeight(20)
+                .scale(colorp);
+
+            svg.select(".legendOrdinal")
+                .call(legendOrdinal);
 		  
-		  
+		    var edgel = svg.append('g')
+                .attr('class','edgeLegend')
+                .attr("transform", "translate(289,125)");;
+
+            edgel.append('text')
+                .html('Confrontation Frequency')
+                .attr("transform", "translate(66,0)")
+                .attr('style','font-weight:bold;font-size:16px;')
+            edgel.selectAll('rect')
+                .data([1,2,3,4,5,6,7,8,9,10,11,12])
+                .enter()
+                .append('rect')
+                .attr('width','25')
+                .attr('height',function(w){ return w/3; })
+                .attr("transform", function(d,i){ return "translate("+ ((i*27)) +",20)";} )
+                .attr('class','link');
+            edgel.append('text')
+                .html('less')
+                .attr("transform", "translate(0,38)")
+                .attr('class','link')
+                .attr('style','font-size:14px;')
+            edgel.append('text')
+                .html('more')
+                .attr("transform", "translate(286,38)")
+                .attr('class','link')
+                .attr('style','font-size:14px;')
 		//Slider code
-		var margin = {top:0, right:50, bottom:0, left:50};
+	/*	var margin = {top:0, right:50, bottom:0, left:50};
 		width = 800;
 		height = 70;
 var svgSlider = d3.select("#slider")
@@ -390,7 +412,7 @@ var label = slider.append("text")
     return d.age < h;
   })
   init(error,newData);
-}
+}*/
 		}
     </script>
 </div>
