--- a/exercise_5/d3_forceLayout/index.html
+++ b/exercise_5/d3_forceLayout/index.html
@@ -21,7 +21,7 @@
     <div id="element1">
     This data shows the confrontational interactions between 28 female bighorn sheep observed on the National Bison Range in 1984.
     Each node is a sheep with a unique ID, color-filled by age.
-    The weight of the connections shows the number of interactions between two sheep.
+    The weight of the connections shows the number of interactions between two sheep. Click on a sheep to highlight its interactions.
     </div>
 </div>
 <div id="graph" style="margin:auto;width:900px;">
