--- a/exercise_5/d3_forceLayout/index.html
+++ b/exercise_5/d3_forceLayout/index.html
@@ -293,11 +293,11 @@
 				//Reduce the opacity of all but the neighbouring nodes
 				d = d3.select(this).node().__data__;
 				node.style("opacity", function (o) {
-				return neighboring(d, o) | neighboring(o, d) ? 1 : 0.1;
+				return neighboring(o, d) ? 1 : 0.1;
 				//return neighboring(d, o) ? 1 : 0.1;
 				});
 				link.style("opacity", function (o) {
-						return d.index==o.source.index | d.index==o.target.index ? 1 : 0.1;
+						return d.index==o.target.index ? 1 : 0.1;
 						//return d.index==o.source.index ? 1 : 0.1;
 				});
 				//Reduce the op
