--- a/final/index.html
+++ b/final/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Final</title>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="application/javascript" src="js/underscore-min.js"></script>
     <script type="application/javascript" src="js/d3.v4.min.js"></script>
+    <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.5/d3-legend.js"></script>
+
     <script type="application/javascript" src="https://momentjs.com/downloads/moment.min.js"></script>
     <script type="application/javascript" src="https://d3js.org/topojson.v2.min.js"></script>
 
@@ -19,7 +21,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center">
-                <h1 class="title  display-3">H1B Job Market</h1>
+                <h1 class="title  display-3">H1-B Job Market</h1>
             </div>
         </div>
     </div>
@@ -29,8 +31,9 @@
         <svg class="job-stats float-left">
             <text class="title h3"></text>
 
+
             <g class="attribute-legend">
-                <text class="wage-title h5">Average Wages</text>
+                <text class="wage-title h5">Average Annual Wage</text>
                 <text class="job-title h5">Certified Positions</text>
             </g>
             <g class="plots"></g>
@@ -38,6 +41,8 @@
                 <line class="wages"></line>
                 <line class="jobs"></line>
             </g>
+            <g class="selected-data-label"></g>
+            <g class="hovered-data-label"></g>
 
         </svg>
         <div class="float-left">
@@ -45,6 +50,7 @@
                 <g class="contextPaths"></g>
             </svg>
             <div class="legend filter-description text-center">
+                <svg class="color-legend"></svg>
                 <table class="container-fluid">
                     <tr class="row">
                         <td class="col">
@@ -55,8 +61,8 @@
                         <td class="col">
                             <table style="margin:auto;">
                                 <tr>
-                                    <td><span>in&nbsp;&nbsp;</span></td>
-                                    <td><span class="location-description"></span></td>
+                                    <td><span>at&nbsp;</span></td>
+                                    <td><span class="company-description"></span></td>
                                 </tr>
                             </table>
                         </td>
@@ -65,7 +71,7 @@
                         <td class="col">
                             <table style="margin:auto;">
                                 <tr>
-                                    <td><span>for&nbsp;&nbsp;</span></td>
+                                    <td><span>for&nbsp;</span></td>
                                     <td><span class="job-description"></span></td>
                                 </tr>
                             </table>
@@ -75,19 +81,21 @@
                         <td class="col">
                             <table style="margin:auto;">
                                 <tr>
-                                    <td><span>at&nbsp;&nbsp;</span></td>
-                                    <td><span class="company-description"></span></td>
+                                    <td><span>in&nbsp;</span></td>
+                                    <td><span class="location-description"></span></td>
                                 </tr>
                             </table>
                         </td>
                     </tr>
+
+
                 </table>
             </div>
         </div>
         <svg class="company-stats float-left">
             <text class="title h3"></text>
             <g class="attribute-legend">
-                <text class="wage-title h5">Average Wages</text>
+                <text class="wage-title h5">Average Annual Wage</text>
                 <text class="job-title h5">Certified Positions</text>
             </g>
             <g class="plots"></g>
@@ -97,6 +105,8 @@
 
 
             </g>
+            <g class="selected-data-label"></g>
+            <g class="hovered-data-label"></g>
         </svg>
     </div>
 
